Make fakeness controllable